--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Teste</title>
+    <title>Novo Teste</title>
 </head>
 <body>
-    <h1>Teste</h1>
+    <h1>Novo - Teste</h1>
 </body>
 </html>
